# throw_protocol

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  setup.cfg  setup.py  tox.ini
cpp/: CMakeLists.txt  Throw.hpp  throw_client.cpp
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
python/: throw.py  throw_client.py  throw_server.py
tests/: __init__.py  test_throw.py
throw/: __init__.py  cli.py
throw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
throw/python/: requirements.txt  throw.py  throw_client.py  throw_server.py
throw/unity/PythonCommunicationExample/Assets/Materials/: New Material.mat
throw/unity/PythonCommunicationExample/Assets/Scripts/: RemoteTransformController.cs  SceneController.cs
throw/unity/PythonCommunicationExample/ProjectSettings/: TagManager.asset
unity/: README.md
unity/PythonCommunicationExample/: .gitignore
unity/PythonCommunicationExample/Assets/: MainScene.unity  New Lighting Settings.lighting  SineWaveMover.cs  ThrowClientExample.cs  python_client.py
unity/PythonCommunicationExample/Assets/MainScene/: LightingData.asset
unity/PythonCommunicationExample/Assets/Scenes/CameraStream/: CameraStream.unity  CameraStreamSineWaveMovement.unity  Pong.mat  Streamer.cs  (+2 more)
unity/PythonCommunicationExample/Assets/Scripts/: CaptureCamera.cs  ColorEncoding.cs  ImageSynthesis.cs  RemoteTransformController.cs  ThrowEndpoint.cs  ThrowEndpointByte.cs  ThrowEndpointFloat.cs  ThrowProtocolManager.cs
unity/PythonCommunicationExample/ProjectSettings/: ProjectSettings.asset
(+15 files in other folders)
